--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: My Blog
+title: 所谓的.Guitar
 SEOTitle: 我的博客 | My Blog
 header-img: img/post-bg-desk.jpg
-email: 暂无
-description: "写一句你想写的话"
+email: pdc1024@qq.com
+description: "喜欢的事情慢慢做，喜欢的生活好好努力，用最舒服的方式去工作和生活"
 keyword: "我的博客"
-url: "http://name.github.io"          # your host, for absolute URL
+url: "http://pcd1024.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/name/name.github.io.git" # you code repository
+github_repo: "https://github.com/pdc1024/pdc1024.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -20,7 +20,7 @@ sidebar-avatar: /img/avatar_binggan.jpg      # use absolute URL, seeing it's use
 RSS: false
 # weibo_username:     暂无
 zhihu_username:     暂无
-github_username:    暂无
+github_username:    pdc1024
 facebook_username:  暂无
 jianshu_username:   暂无
 #twitter_username:   暂无
@@ -62,8 +62,8 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID:                             #生成的clientID
   clientSecret:     #生成的clientSecret
-  repo: name.github.io    #仓库名称
-  owner:     #github用户名
+  repo: pdc1024.github.io    #仓库名称
+  owner:pdc1024     #github用户名
   admin: 
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
@@ -75,7 +75,7 @@ gitalk:
 ba_track_id: 
 # Google Analytics
 ga_track_id:             # Format: UA-xxxxxx-xx
-ga_domain:                # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
