--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/pdc1024/pdc1024.github.io.git" # you code repos
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "苟利国家生死以，岂因祸福避趋之~"
+sidebar-about-description: "愿山河无恙，祖国繁荣昌盛"
 sidebar-avatar: /img/chen.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
