--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/pdc1024/pdc1024.github.io.git" # you code repos
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "愿山河无恙，祖国繁荣昌盛"
-sidebar-avatar: /img/chen.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/成果.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
